; ModuleID = '/home/carl/AnghaBench/tg/extr_main.c_make_full_path.c'
source_filename = "/home/carl/AnghaBench/tg/extr_main.c_make_full_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"%s/%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @make_full_path(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = load i8, i8* %4, align 1
  %6 = sext i8 %5 to i32
  %7 = icmp ne i32 %6, 47
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load i8*, i8** %2, align 8
  store i8* %9, i8** %3, align 8
  %10 = call i32 (...) @get_home_directory()
  %11 = load i8*, i8** %2, align 8
  %12 = call i32 @tasprintf(i8** %2, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %10, i8* %11)
  %13 = load i8*, i8** %3, align 8
  %14 = call i32 @tfree_str(i8* %13)
  br label %15

15:                                               ; preds = %8, %1
  %16 = load i8*, i8** %2, align 8
  ret i8* %16
}

declare dso_local i32 @tasprintf(i8**, i8*, i32, i8*) #1

declare dso_local i32 @get_home_directory(...) #1

declare dso_local i32 @tfree_str(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
